--- a/example/index.html
+++ b/example/index.html
@@ -40,7 +40,6 @@
         <canvas width="800" height="600" id="grid"></canvas>
         <canvas width="800" height="600" id="canvas"></canvas>
       </div> 
-      
       <div class="col-md-6">
 
         <p id="display">
@@ -89,7 +88,15 @@
           <dd><input id="fovy" type="range" min="0.0" max="2.0" value="1.0" step="0.001"/></dd>
         </dl>
       </div>
-
+      <video
+        visibility="hidden"
+        crossorigin="anonymous"
+        src="https://cv.phncdn.com/videos/201810/11/186951722/480P_600K_186951722.mp4?7r1EQjhj6J8iw6Gm43CbdIn10nbrgmV6eUdOi107PqRxKznE8sJ-3UzzJvnuYScqhTW9fS3Lbb7g3BwRwTipqzE5uKTbumK-F2u2TnHNwZWlsGtxLLQ1zSWkQF3JsnsIeuhR4xohJzJQxDpK3DPpo_Yy0fVqxV1qDUCUFtD-4C-joHgIkmTM0-1RMkDcmQ0rAd98_ZpcyA"
+        width="800"
+        height="600"
+        autoplay="true"
+        id="video">
+      </video>
     </div>
 
     <br style="clear:both;" />
