--- a/example/index.html
+++ b/example/index.html
@@ -37,8 +37,8 @@
     <div class="row">
 
       <div class="col-md-6">
-        <canvas width="800" height="600" id="grid"></canvas>
-        <canvas width="800" height="600" id="canvas"></canvas>
+        <canvas width="800" height="480" id="grid"></canvas>
+        <canvas width="800" height="480" id="canvas"></canvas>
       </div> 
       <div class="col-md-6">
 
@@ -89,11 +89,9 @@
         </dl>
       </div>
       <video
-        visibility="hidden"
         crossorigin="anonymous"
-        src="https://cv.phncdn.com/videos/201810/11/186951722/480P_600K_186951722.mp4?7r1EQjhj6J8iw6Gm43CbdIn10nbrgmV6eUdOi107PqRxKznE8sJ-3UzzJvnuYScqhTW9fS3Lbb7g3BwRwTipqzE5uKTbumK-F2u2TnHNwZWlsGtxLLQ1zSWkQF3JsnsIeuhR4xohJzJQxDpK3DPpo_Yy0fVqxV1qDUCUFtD-4C-joHgIkmTM0-1RMkDcmQ0rAd98_ZpcyA"
-        width="800"
-        height="600"
+        src="https://firebasestorage.googleapis.com/v0/b/speedfromvideo.appspot.com/o/projects%2F6czT5b55QbFTLTPeU8Mi%2Fvideo.mp4?alt=media&token=c7fe44e7-7182-4bbe-883a-b953bdc481f1"
+        type="video/mp4"
         autoplay="true"
         id="video">
       </video>
