--- a/example/index.html
+++ b/example/index.html
@@ -48,8 +48,9 @@
           Fx: <span class="Fx"></span>,
           Fy: <span class="Fy"></span>,
           scale: <span class="scale"></span>,
-          x: <span class="x"></span>,
-          y: <span class="y"></span>
+          k3: <span class="k3"></span>,
+          k5: <span class="k5"></span>,
+          k7: <span class="k7"></span>
         </p>
         <p class="exif-camera"></p>
         <p><a onClick="$('.exif').toggle();">Show full EXIF data</a></p>
@@ -57,40 +58,22 @@
         <p>Drag a new image from your desktop onto the old one to run the correction on a new image. Right-click image to download.</p>
         <p>Use the sliders to adjust the correction.</p>
         <dl>
-          <dt>Fx</dt>
-          <dd>
-            <input id="Fx" type="range" min="0.0" max="2.0" value="1.0" step="0.01"/>
-            <span id="Fx_label"></span>
-          </dd>
-          <dt>Fy</dt>
-          <dd>
-            <input id="Fy" type="range" min="0.0" max="2.0" value="1.0" step="0.01"/>
-            <span id="Fy_label"></span>
-          </dd>
-          <dt>a</dt>
-          <dd>
-            <input id="a" type="range" min="0.0" max="4.0" value="1.0" step="0.001"/>
-            <span id="a_label"></span>
-          </dd>
-          <dt>b</dt>
-          <dd>
-            <input id="b" type="range" min="0.0" max="4.0" value="1.0" step="0.001"/>
-            <span id="b_label"></span>
-          </dd>
           <dt>scale</dt>
           <dd>
-            <input id="scale" type="range" min="0.0" max="20.0" value="1.0" step="0.001"/>
+            <input id="scale" type="range" min="-100.0" max="100.0" value="0.0" step="0.1"/>
             <span id="scale_label"></span>
           </dd>
-          <dt>fov x</dt>
-          <dd><input id="fovx" type="range" min="0.0" max="2.0" value="1.0" step="0.001"/></dd>
-          <dt>fov y</dt>
-          <dd><input id="fovy" type="range" min="0.0" max="2.0" value="1.0" step="0.001"/></dd>
+          <dt>k3</dt>
+          <dd><input id="k3" type="range" min="-100.0" max="100.0" value="0.0" step="0.01"/></dd>
+          <dt>k5</dt>
+          <dd><input id="k5" type="range" min="-100.0" max="100.0" value="0.0" step="0.01"/></dd>
+          <dt>k7</dt>
+          <dd><input id="k7" type="range" min="-100.0" max="100.0" value="0.0" step="0.01"/></dd>
         </dl>
       </div>
       <video
         crossorigin="anonymous"
-        src="https://firebasestorage.googleapis.com/v0/b/speedfromvideo.appspot.com/o/projects%2F6czT5b55QbFTLTPeU8Mi%2Fvideo.mp4?alt=media&token=c7fe44e7-7182-4bbe-883a-b953bdc481f1"
+        src="https://firebasestorage.googleapis.com/v0/b/speedfromvideo.appspot.com/o/projects%2FwGTs4sYQaeTvSUxjKjTd%2Fdistortion.mp4?alt=media&token=b56a2da1-6bbc-4767-96fa-a8e886b3034f"
         type="video/mp4"
         autoplay="true"
         id="video">
@@ -98,35 +81,6 @@
     </div>
 
     <br style="clear:both;" />
-    <p><b>Presets</b></p>
-    <p>If you find the right settings for a particular camera or lens, <a href="https://github.com/jywarren/fisheyegl/issues/new">send them in</a> or email jeff@publiclab.org to get them added to a list of presets for a future "auto-correct" feature.</p>
-    <ul>
-      <li>
-        Mobius Action Cam (default lens): 
-        <a onClick="example.useHash('#a=1.048&b=1.059&Fx=0.09&Fy=0.22&scale=1.087&x=1&y=1');">preset</a>
-      </li>
-      <li>
-        <a href="https://publiclab.org/questions/warren/05-20-2017/cheap-lightweight-gopro-alternatives-for-aerial-mapping">GoPro alternatives</a>: 
-        <a onClick="example.useHash('#a=1&b=1&Fx=0.16&Fy=0.16&scale=1.087&x=1&y=1');">preset</a> (many almost identical)
-      </li>
-    </ul>
-
-    <hr style="clear:both;" />
-
-    <h3>Previous images</h3>
-    <p>Drag a new image above and the current image will be saved here. Click (or right-click) to open or download.</p>
-
-    <div id="previous"></div>
-
-    <hr style="clear:both;" />
-
-    <h2>Questions</h2>
-      
-    <p>Ask and answer questions to peer-troubleshoot this system:</p>
-      
-    <iframe style="border:none;" width="100%" height="900px" src="//publiclab.org/embed/grid/question:lens-distortion"></iframe>
-
-    </div>  
     <hr />
 
     <footer>
