Added zoom; removed unused files

--- a/example/index.html
+++ b/example/index.html
@@ -51,6 +51,7 @@
           k3: <span class="k3"></span>,
           k5: <span class="k5"></span>,
           k7: <span class="k7"></span>
+          zoom: <span class="zoom"></span>
         </p>
         <p class="exif-camera"></p>
         <p><a onClick="$('.exif').toggle();">Show full EXIF data</a></p>
@@ -69,6 +70,8 @@
           <dd><input id="k5" type="range" min="-100.0" max="100.0" value="0.0" step="0.01"/></dd>
           <dt>k7</dt>
           <dd><input id="k7" type="range" min="-100.0" max="100.0" value="0.0" step="0.01"/></dd>
+          <dt>zoom</dt>
+          <dd><input id="zoom" type="range" min="1" max="4" value="1.0" step="0.01"/></dd>
         </dl>
       </div>
       <video
